Closed
Bug 450784
Opened 17 years ago
Closed 15 years ago
add PyXPCOM support for null strings
Categories
(Other Applications Graveyard :: PyXPCOM, defect)
Other Applications Graveyard
PyXPCOM
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: twhitema, Unassigned)
References
Details
Attachments
(1 file, 1 obsolete file)
User-Agent: Mozilla/5.0 (X11; U; Linux x86_64; en-US; rv:1.9.0.1) Gecko/2008072820 Firefox/3.0.1
Build Identifier: Mozilla 1.9 - Komodo 5.0.0
Continued on from bug 450615.
PyXPCOM does not yet support null dom strings, that is, automatically converting a Python None type into a null string reference through XPCOM. The null string API was added in for Mozilla 1.9, see bug 380783 for the details.
Reproducible: Always
| Reporter | ||
Comment 1•17 years ago
|
||
Attachment #333984 -
Flags: review?(mhammond)
Comment 2•17 years ago
|
||
the code looks fine, but is there any chance of some tests to make sure it stays alive over time?
| Reporter | ||
Comment 3•17 years ago
|
||
Same as last patch, except this includes tests for setting astring values to NULL from both JS and Python.
Attachment #333984 -
Attachment is obsolete: true
Attachment #337527 -
Flags: review?(mhammond)
Attachment #333984 -
Flags: review?(mhammond)
Updated•16 years ago
|
Component: XPCOM → PyXPCOM
Product: Core → Other Applications
QA Contact: xpcom → pyxpcom
| Reporter | ||
Comment 4•15 years ago
|
||
Committed this to pyxpcom repository:
http://hg.mozilla.org/pyxpcom/rev/ca68733fe470
Status: UNCONFIRMED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
| Reporter | ||
Updated•15 years ago
|
Attachment #337527 -
Flags: review?(mhammond)
Updated•7 years ago
|
Product: Other Applications → Other Applications Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•