fix: pyxpcom: add support for null strings https://bugzilla.mozilla.org/show_bug.cgi?id=450784